--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,24 +1,20 @@
 server {
-    	listen 					80 default_server;  
-    	listen 					[::]:80 default_server;
-    	return 					301 https://$host$request_uri;
-}
-
-server {
+	
     	# SSL configuration
+
     	listen                  443 ssl ;
     	listen                  [::]:443 ssl ;
-
-		autoindex on;
 
     	ssl_certificate         /etc/ssl/certs/localhost.crt;
     	ssl_certificate_key     /etc/ssl/certs/localhost.key;
 
     	    root 				/var/www/html;
-			index				index.html index.php;
+        	index				index.html index.htm index.nginx-debian.html;
     		server_name		_;
 
     	    location / {
+								# First attempt to serve request as file, then
+                				# as directory, then fall back to displaying a 404.
     	            			try_files $uri $uri/ =404;
     	    }
 
@@ -28,4 +24,6 @@ server {
     	           				include snippets/fastcgi-php.conf;
     	           				fastcgi_pass unix:/run/php/php7.3-fpm.sock;
     	    }
+
+			#return 					301 https://$host$request_uri;
 }
