--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,16 +1,21 @@
+# HTTPS server config
+
 server {
-	
     	# SSL configuration
 
     	listen                  443 ssl ;
     	listen                  [::]:443 ssl ;
 
+		ssl						on;
     	ssl_certificate         /etc/ssl/certs/localhost.crt;
     	ssl_certificate_key     /etc/ssl/certs/localhost.key;
+		ssl_protocols			TLSv1.3;
+
+		# Site configuration
 
     	    root 				/var/www/html;
-        	index				index.html index.htm index.nginx-debian.html;
-    		server_name		_;
+        	index				eugene.html;
+    		server_name			127.0.0.1;
 
     	    location / {
 								# First attempt to serve request as file, then
@@ -25,5 +30,7 @@ server {
     	           				fastcgi_pass unix:/run/php/php7.3-fpm.sock;
     	    }
 
-			#return 					301 https://$host$request_uri;
+			# redirect URL to domain name
+
+			#return 301 $https://pthomas.42.fr$request_uri;
 }
