--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -12,8 +12,6 @@
 
 FROM	debian:buster
 
-#WORKDIR /.
-
 # Update and install process
 RUN		apt-get update -y && apt-get upgrade -y
 
@@ -26,9 +24,9 @@ COPY	./conf/nginx.conf /etc/nginx/sites-available/pthomas.42.fr.conf
 RUN		ln -s /etc/nginx/sites-available/pthomas.42.fr.conf /etc/nginx/sites-enabled/pthomas.42.fr.conf
 
 # Generate certificate
-RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj "/C=FR/ST=Auvergne-Rhône-Alpes/L=Lyon/emailAddress=pthomas@student.42lyon.fr" -keyout ./etc/ssl/certs/localhost.key -out ./etc/ssl/certs/localhost.crt
+RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj "/C=FR/ST=Auvergne-Rhône-Alpes/L=Lyon/emailAddress=pthomas@student.42lyon.fr" -keyout /etc/ssl/certs/localhost.key -out /etc/ssl/certs/localhost.crt
 
 # Open port
 EXPOSE	443
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD		["nginx", "-g", "daemon off;"]
