--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -12,21 +12,21 @@
 
 FROM	debian:buster
 
-# Update and install process
+# SYSTEM UPDATE AND DEPENDENCIES
 RUN		apt-get update -y && apt-get upgrade -y
 
-# Install nginx and openssl
+# NGINX + OPENSSL
 RUN		apt-get install -y nginx openssl	
 
-# Add my website config and html page
+# CONFIG
 COPY	./tools/eugene.html /var/www/html/.
 COPY	./conf/nginx.conf /etc/nginx/sites-available/pthomas.42.fr.conf
 RUN		ln -s /etc/nginx/sites-available/pthomas.42.fr.conf /etc/nginx/sites-enabled/pthomas.42.fr.conf
 
-# Generate certificate
+# SSL CERTIFICATE
 RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj "/C=FR/ST=Auvergne-Rhône-Alpes/L=Lyon/emailAddress=pthomas@student.42lyon.fr" -keyout /etc/ssl/certs/localhost.key -out /etc/ssl/certs/localhost.crt
 
-# Open port
+# PORTS
 EXPOSE	443
 
 CMD		["nginx", "-g", "daemon off;"]
