Added some comments

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -29,4 +29,5 @@ RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj "/C=FR/ST=Auvergn
 # PORTS
 EXPOSE	443
 
+# START
 CMD		["nginx", "-g", "daemon off;"]
