--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -13,7 +13,7 @@
 FROM	debian:buster
 
 # SYSTEM UPDATE AND DEPENDENCIES
-RUN		apt-get update -y && apt-get upgrade -y && apt-get -y install tar
+RUN		apt-get update -y && apt-get upgrade -y && apt-get install -y tar
 
 # PHPMYADMIN
 RUN		apt-get install -y php-fpm php-mysql
@@ -25,15 +25,9 @@ RUN		tar -xvf /tmp/wordpress.tar.gz -C /var/www/html \
 &&		rm -f /tmp/wordpress.tar.gz
 
 # CONFIG
-
-#RUN		rm -f /var/www/html/phpmyadmin/config.sample.inc.php 
-#COPY	./srcs/config.inc.php ./var/www/html/phpmyadmin/config.inc.php
 #COPY	./srcs/wp-config.php ./var/www/html/wordpress
 
+#RUN		chown -R www-data:www-data /var/www/html/wordpress \
 
-#RUN		chmod 444 /var/www/html/phpmyadmin/config.inc.php \
-#		&& chown -R www-data:www-data /var/www/html/wordpress \
-#		&& chown -R www-data:www-data /var/www/html/phpmyadmin
-
-
+# START
 #CMD		["service", "php-fpm", "start;"]
