Added most of docker-compose commands, Makefile done.

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -24,7 +24,10 @@ COPY	./conf/nginx.conf /etc/nginx/sites-available/pthomas.42.fr.conf
 RUN		ln -s /etc/nginx/sites-available/pthomas.42.fr.conf /etc/nginx/sites-enabled/pthomas.42.fr.conf
 
 # SSL CERTIFICATE
-RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj "/C=FR/ST=Auvergne-Rhône-Alpes/L=Lyon/emailAddress=pthomas@student.42lyon.fr" -keyout /etc/ssl/certs/localhost.key -out /etc/ssl/certs/localhost.crt
+RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+		-subj "/C=FR/ST=Auvergne-Rhône-Alpes/L=Lyon/emailAddress=pthomas@student.42lyon.fr" \
+		-keyout /etc/ssl/certs/localhost.key \
+		-out /etc/ssl/certs/localhost.crt
 
 # PORTS
 EXPOSE	443
