--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -12,11 +12,16 @@
 
 FROM	debian:buster
 
+ARG		MYSQL_DATABASE
+ARG		MYSQL_USER
+ARG		MYSQL_PASSWORD
+
 # SYSTEM UPDATE AND DEPENDENCIES
 RUN		apt-get update -y && apt-get upgrade -y && apt-get install -y tar
 
 # PHPMYADMIN
-RUN		apt-get install -y php-fpm php-mysql
+RUN		apt-get install -y php-fpm php-mysql \
+&&		mkdir -p /run/php
 
 # WORDPRESS
 ADD		"https://wordpress.org/latest.tar.gz" /tmp/wordpress.tar.gz
@@ -25,9 +30,12 @@ RUN		tar -xvf /tmp/wordpress.tar.gz -C /var/www/html \
 &&		rm -f /tmp/wordpress.tar.gz
 
 # CONFIG
-#COPY	./srcs/wp-config.php ./var/www/html/wordpress
+RUN		cp /var/www/html/wordpress/wp-config-sample.php /var/www/html/wordpress/wp-config.php \
+&&		sed -i "s/database_name_here/$MYSQL_DATABASE/" /var/www/html/wordpress/wp-config.php \
+&&		sed -i "s/username_here/$MYSQL_USER/" /var/www/html/wordpress/wp-config.php \
+&&		sed -i "s/password_here/$MYSQL_PASSWORD/" /var/www/html/wordpress/wp-config.php && touch AUSECOURSMONDIEU
 
-#RUN		chown -R www-data:www-data /var/www/html/wordpress \
+#RUN		chown -R www-data:www-data /var/www/html/wordpress
 
 # START
-#CMD		["service", "php-fpm", "start;"]
+CMD		["php-fpm7.3", "-F"]
