--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,9 +13,9 @@ server {
 
 		# Site configuration
 
-			root 				/var/www/html;
-			index				eugene.html;
-			server_name			127.0.0.1;
+			root 				/var/www/html/wordpress;
+			index				index.php;
+			server_name			pthomas.42.fr;
 
 			location / {
 								# First attempt to serve request as file, then
@@ -26,8 +26,16 @@ server {
 			# pass PHP scripts to FastCGI server
 
 			location ~ \.php$ {
-				   				include snippets/fastcgi-php.conf;
-				   				fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+								include fastcgi_params;
+								fastcgi_pass wordpress:9000;
+								fastcgi_index index.php;
+								fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+								#fastcgi_split_path_info ^(.+\.php)(/.+)$;
+								#fastcgi_pass wordpress:9000;
+								#fastcgi_index index.php;
+								#fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+								#fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+
 			}
 
 			# redirect URL to domain name
