--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,25 +1,27 @@
 
 FROM	debian:buster
 
+# RETRIEVE DB CREDS FROM ENV
 ARG		MYSQL_ROOT_PASSWORD
 ARG		MYSQL_DATABASE
 ARG		MYSQL_USER
 ARG		MYSQL_PASSWORD
 
 # SYSTEM UPDATE AND DEPENDENCIES
-RUN		echo $MYSQL_ROOT_PASSWORD > test.txt
 RUN		apt-get update -y && apt upgrade -y
 
 # MARIADB
-RUN		apt-get install -y mariadb-server
+RUN		apt-get install -y mariadb-server mariadb-client
 
 # CREATE WORDRPRESS DATABASE
 RUN		service mysql start \
 &&		mysql -e "create database if not exists $MYSQL_DATABASE;\
 alter user 'root'@'localhost' identified by '$MYSQL_ROOT_PASSWORD';\
-create user '$MYSQL_USER'@'localhost' identified by '$MYSQL_PASSWORD';\
+grant all privileges on $MYSQL_DATABASE.* to '$MYSQL_USER'@'%' identified by '$MYSQL_PASSWORD';\
 flush privileges;"
 
-# START
-CMD		["mysqld"]
+# PORTS
+EXPOSE	3306
 
+# START
+ENTRYPOINT	["mysqld", "--bind-address=0.0.0.0"]
