--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -33,4 +33,4 @@ RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
 EXPOSE	443
 
 # START
-CMD		["nginx", "-g", "daemon off;"]
+ENTRYPOINT	["nginx", "-g", "daemon off;"]
