--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,7 @@
+DOMAIN_NAME=pthomas.42.fr
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=root44
 MYSQL_DATABASE=wordpress
 MYSQL_USER=pthomas
 MYSQL_PASSWORD=pthomas44
+MYSQL_HOST=mariadb:3306
