--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,9 +6,11 @@ server {
 		listen                  443 ssl ;
 		listen                  [::]:443 ssl ;
 
-		ssl						on;
-		ssl_certificate         /etc/ssl/certs/localhost.crt;
-		ssl_certificate_key     /etc/ssl/certs/localhost.key;
+		ssl						on;/run/secrets/
+		ssl_certificate         /run/secrets/ssl-certificate/inception_ssl.crt;
+		ssl_certificate_key     /run/secrets/ssl-key/inception_ssl.key;
+		# ssl_certificate         /etc/ssl/certs/localhost.crt;
+		# ssl_certificate_key     /etc/ssl/certs/localhost.key;
 		ssl_protocols			TLSv1.3;
 
 		# Site configuration
