--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,17 @@
+
+# This file should not be push with the project but as it is a school project i need to have it for my project to be evaluated
+
 DOMAIN_NAME=pthomas.42.fr
+
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=root44
 MYSQL_DATABASE=wordpress
 MYSQL_USER=pthomas
 MYSQL_PASSWORD=pthomas44
 MYSQL_HOST=mariadb:3306
+
+# WORDPRESS SITE SETUP
+WP_SITE_TITLE="Eugène le boss"
+WP_ADMIN=pthomas
+WP_ADMIN_PASSWORD=pthomas44
+WP_ADMIN_EMAIL=pthomas@student.42lyon.fr
