working on bonuses

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -44,6 +44,21 @@ services:
     depends_on:
       - mariadb
 
+  redis:
+      container_name: redis
+      image: redis
+      profiles:
+        - bonus
+      build:
+        context: ./requirements/bonus/redis
+      volumes:
+        - site:/var/www/html
+      networks:
+        - inception
+      restart: on-failure
+      depends_on:
+        - wordpress
+
   nginx:
     container_name: nginx
     image: nginx
@@ -61,6 +76,9 @@ services:
     secrets:
       - ssl-certificate
       - ssl-key
+
+profiles:
+  - bonus
 
 volumes:
   db:
