--- a/srcs/requirements/bonus/redis/Dockerfile
+++ b/srcs/requirements/bonus/redis/Dockerfile
@@ -13,15 +13,22 @@
 FROM	debian:buster
 
 # SYSTEM UPDATE AND DEPENDENCIES
-RUN		apt-get update -y && apt-get upgrade -y
+RUN		apt-get update -y && apt-get upgrade -y && apt-get install -y php-fpm php-mysql php-redis
 
 # REDIS
 RUN		apt-get install -y redis-server
 
 # CONFIG
+RUN		redis-cli config set maxmemory 256mb \
+&&		redis-cli config set maxmemory-policy allkeys-lfu
+
+# WP CLI
+ADD		https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar /usr/local/bin/wp
+RUN		chmod +x /usr/local/bin/wp
 
 # PORTS
 EXPOSE	6379
 
 # START
-ENTRYPOINT	[ "redis-server" ]
+COPY	./tools/entrypoint.sh /tmp
+ENTRYPOINT	["sh", "/tmp/entrypoint.sh"]
