--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -48,6 +48,7 @@ services:
         context: ./requirements/bonus/redis
       environment:
         - DOMAIN_NAME
+        - REDIS_PASSWORD
       volumes:
         - site:/var/www/html
       networks:
@@ -55,6 +56,7 @@ services:
       restart: on-failure
       depends_on:
         - wordpress
+        - mariadb
 
   nginx:
     container_name: nginx
