--- a/srcs/requirements/bonus/ftp-serv/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp-serv/conf/vsftpd.conf
@@ -28,7 +28,7 @@ anonymous_enable=NO
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
-#write_enable=YES
+write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
@@ -62,7 +62,7 @@ connect_from_port_20=YES
 # If you want, you can arrange for uploaded anonymous files to be owned by
 # a different user. Note! Using "root" for uploaded files is not
 # recommended!
-#chown_uploads=YES
+chown_uploads=YES
 #chown_username=whoever
 #
 # You may override where the log file goes if you like. The default is shown
@@ -119,10 +119,10 @@ chroot_local_user=YES
 # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
 # the user does not have write access to the top level directory within the
 # chroot)
-#chroot_local_user=YES
-#chroot_list_enable=YES
+chroot_local_user=YES
+chroot_list_enable=YES
 # (default follows)
-#chroot_list_file=/etc/vsftpd.chroot_list
+chroot_list_file=/etc/vsftpd.chroot_list
 #
 # You may activate the "-R" option to the builtin ls. This is disabled by
 # default to avoid remote users being able to cause excessive I/O on large
@@ -149,7 +149,14 @@ pam_service_name=vsftpd
 rsa_cert_file=/run/secrets/inception_ssl.crt
 rsa_private_key_file=/run/secrets/inception_ssl.key
 ssl_enable=YES
+force_local_logins_ssl=NO
+force_local_data_ssl=NO
 
 #
 # Uncomment this to indicate that vsftpd use a utf8 filesystem.
 #utf8_filesystem=YES
+local_root=/var/www/html
+pasv_min_port=30000
+pasv_max_port=31000
+
+background=NO
