--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,7 @@
 
-# This file should not be push with the project but as it is a school project i need to have it for my project to be evaluated
+# This file should not be push with the project but as it is a school project
+# i need to have it for my project to be evaluated.
+# Same applies for the SSL certificates
 
 DOMAIN_NAME=pthomas.42.fr
 
