--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -39,6 +39,25 @@ services:
     depends_on:
       - mariadb
 
+  nginx:
+    container_name: nginx
+    image: nginx
+    build:
+      context: ./requirements/nginx
+    volumes:
+      - site:/var/www/html
+    networks:
+      - inception
+    ports:
+      - "443:443"
+    restart: on-failure
+    depends_on:
+      - wordpress
+      - adminer
+    secrets:
+      - inception_ssl.crt
+      - inception_ssl.key
+
   adminer:
     container_name: adminer
     image: adminer
@@ -95,24 +114,23 @@ services:
       - wordpress
       - mariadb
 
-  nginx:
-    container_name: nginx
-    image: nginx
+  portsentry:
+    container_name: portsentry
+    image: portsentry
     build:
-      context: ./requirements/nginx
-    volumes:
-      - site:/var/www/html
+      context: ./requirements/bonus/portsentry
     networks:
       - inception
-    ports:
-      - "443:443"
     restart: on-failure
-    depends_on:
-      - wordpress
-      - adminer
-    secrets:
-      - inception_ssl.crt
-      - inception_ssl.key
+
+  fail2ban:
+    container_name: fail2ban
+    image: fail2ban
+    build:
+      context: ./requirements/bonus/fail2ban
+    networks:
+      - inception
+    restart: on-failure
 
 volumes:
   db:
@@ -141,6 +159,3 @@ secrets:
       file: ./requirements/nginx/conf/inception_ssl.crt
     inception_ssl.key:
       file: ./requirements/nginx/conf/inception_ssl.key
-
-# fail to ban
-# port entry
