--- a/srcs/.env
+++ b/srcs/.env
@@ -13,7 +13,7 @@ MYSQL_PASSWORD=pthomas44
 MYSQL_HOST=mariadb:3306
 
 # WORDPRESS SITE SETUP
-WP_SITE_TITLE="Eugène le boss"
+WP_SITE_TITLE="Eugène le Boss"
 WP_ADMIN=pthomas
 WP_ADMIN_PASSWORD=pthomas44
 WP_ADMIN_EMAIL=pthomas@student.42lyon.fr
