--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -14,7 +14,7 @@ server {
 		# Site configuration
 
 			root 				/var/www/html/wordpress;
-			index				index.html, index.php;
+			index				index.php, index.html;
 			server_name			pthomas.42.fr;
 
 			location / {
