--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -117,6 +117,8 @@ services:
   fail2ban:
     container_name: fail2ban
     image: fail2ban
+    profiles:
+      - bonus
     build:
       context: ./requirements/bonus/fail2ban
     networks:
